Home: fixed scroll bug on mobile.

--- a/public/static/stylesheets/home.style.css
+++ b/public/static/stylesheets/home.style.css
@@ -1380,17 +1380,5 @@
 
 /*Don't add the module class to this element. This is out of the container div.*/
 
-.immersive-wrapper {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    overflow: hidden;
-    box-sizing: border-box;
-    padding: 0 !important;
-    justify-content: space-around;
-    align-items: center;
-    overflow-x: hidden;
-}
+
 
